--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <button onclick="addInput()">Ajouter une gondole</button>
     <h2>Total Enregistrés:</h2>
     <ul id="saved-totals"></ul>
-    <button onclick="clearCache()">Vider le cache</button>
+    <button onclick="clearCache()">
+        Vider le cache
+    </button>
 </body>
 
 <script src="Mesure.js"></script>
